[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=68", "setuptools-scm>=3.0.3", "wheel" ]

[tool.ruff]
exclude = [ "**/migrations/*" ]
line-length = 88
lint.select = [
  "AIR",   # Airflow
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "C90",   # mccabe
  "E",     # pycodestyle errors
  "F",     # Pyflakes
  "FA",    # flake8-future-annotations
  "FLY",   # flynt
  "I",     # isort
  "ICN",   # flake8-import-conventions
  "INT",   # flake8-gettext
  "LOG",   # flake8-logging
  "NPY",   # NumPy-specific rules
  "PD",    # pandas-vet
  "PLE",   # Pylint errors
  "PYI",   # flake8-pyi
  "SLOT",  # flake8-slots
  "T10",   # flake8-debugger
  "TCH",   # flake8-type-checking
  "W",     # pycodestyle warnings
  "YTT",   # flake8-2020
]
lint.isort.known-first-party = [ "drf_yasg", "testproj", "articles", "people", "snippets", "todo", "users", "urlconfs" ]
lint.mccabe.max-complexity = 13
lint.per-file-ignores."src/drf_yasg/inspectors/field.py" = [ "E721" ]
lint.per-file-ignores."src/drf_yasg/openapi.py" = [ "E721" ]
lint.per-file-ignores."testproj/testproj/settings/*" = [ "F405" ]

[tool.setuptools_scm]
