[build-system]
requires = [ "setuptools >= 77.0.3", "setuptools-scm ~= 7.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "drf-yasg"
requires-python = ">= 3.9"
dynamic = [ "version" ]

authors = [
  { name = "Cristi V.", email = "cristi@cvjd.me" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Topic :: Documentation",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "django >= 4.0",
  "djangorestframework >= 3.13",
  "inflection >= 0.3.1",
  "packaging >= 21.0",
  "pytz >= 2021.1",
  "pyyaml >= 5.1",
  "uritemplate >= 3.0.0",
]
description = """Automated generation of real Swagger/OpenAPI 2.0 schemas \
from Django Rest Framework code."""
keywords = [
  "codegen",
  "django",
  "django-rest-framework",
  "django-rest-swagger",
  "documentation",
  "drf",
  "drf-openapi",
  "drf-yasg",
  "openapi",
  "schema",
  "swagger",
  "swagger-codegen",
]
license = "BSD-3-Clause"
license-files = [ "LICENSE.rst" ]
readme =  "README.rst"

[project.optional-dependencies]
coreapi = [ "coreapi >= 2.3.3", "coreschema >= 0.0.4" ]
validation = [ "swagger-spec-validator >= 2.1.0" ]

[project.urls]
Changelog = "https://drf-yasg.readthedocs.io/en/stable/changelog.html"
Documentation = "https://drf-yasg.readthedocs.io/en/stable/"
Homepage = "https://github.com/axnsan12/drf-yasg"
Issues = "https://github.com/axnsan12/drf-yasg/issues"
Repository = "https://github.com/axnsan12/drf-yasg"

[tool.ruff]
exclude = [ "**/migrations/*" ]
line-length = 88
lint.select = [
  "AIR",   # Airflow
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "C90",   # mccabe
  "E",     # pycodestyle errors
  "F",     # Pyflakes
  "FA",    # flake8-future-annotations
  "FLY",   # flynt
  "I",     # isort
  "ICN",   # flake8-import-conventions
  "INT",   # flake8-gettext
  "LOG",   # flake8-logging
  "NPY",   # NumPy-specific rules
  "PD",    # pandas-vet
  "PLE",   # Pylint errors
  "PYI",   # flake8-pyi
  "SLOT",  # flake8-slots
  "T10",   # flake8-debugger
  "TCH",   # flake8-type-checking
  "W",     # pycodestyle warnings
  "YTT",   # flake8-2020
]
lint.isort.known-first-party = [ "drf_yasg", "testproj", "articles", "people", "snippets", "todo", "users", "urlconfs" ]
lint.mccabe.max-complexity = 13
lint.per-file-ignores."src/drf_yasg/inspectors/field.py" = [ "E721" ]
lint.per-file-ignores."src/drf_yasg/openapi.py" = [ "E721" ]
lint.per-file-ignores."testproj/testproj/settings/*" = [ "F405" ]

[tool.setuptools_scm]
