[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 77.0.3", "setuptools-scm ~= 7.0"]

[project]
name = "drf-yasg"
description = "Automated generation of real Swagger/OpenAPI 2.0 schemas from Django Rest Framework code."

requires-python = ">= 3.10"
dynamic = ["version"]

license = "BSD-3-Clause"
license-files = ["LICENSE.rst"]
readme = "README.rst"

dependencies = [
    "django >= 4.0",
    "djangorestframework >= 3.13",
    "inflection >= 0.3.1",
    "packaging >= 21.0",
    "pytz >= 2021.1",
    "pyyaml >= 5.1",
    "swagger-spec-validator >= 2.1.0",
    "uritemplate >= 3.0.0",
]

keywords = [
    "codegen",
    "django-rest-framework",
    "django-rest-swagger",
    "django",
    "documentation",
    "drf-openapi",
    "drf-yasg",
    "drf",
    "openapi",
    "schema",
    "swagger-codegen",
    "swagger",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Software Development :: Code Generators",
]

[dependency-groups]
all = [
    "cmarkgfm >= 0.8.0,<0.9.0",
    "codecov >= 2.0.9",
    "datadiff >= 2",
    "dj-database-url >= 0.4.2",
    "Django >= 2.0",
    "django-cors-headers",
    "django-fake-model == 0.1.4",
    "django-filter >= 2.4.0,<25",
    "django-oauth-toolkit >= 1.3.0",
    "djangorestframework-camel-case >= 1.1.2",
    "djangorestframework-recursive >= 0.1.2",
    "Pillow >= 4.3.0",
    "psycopg2-binary >= 2.9.5",
    "pytest >= 7",
    "pytest-cov >= 4",
    "pytest-django >= 4",
    "pytest-xdist >= 3",
    "readme_renderer[md ]>= 24.0",
    "ruff >= 0.11.0",
    "Sphinx >= 1.7.0",
    "sphinx_rtd_theme >= 0.2.4",
    "tox >= 4.0",
    "tox-gh >= 1.7.1",
    "tox-uv >= 1.33.1",
    "twine >= 5.0.0",
    "user_agents >= 1.1.0",
]

[[project.authors]]
name = "Cristi V."
email = "cristi@cvjd.me"

[project.urls]
Changelog = "https://drf-yasg.readthedocs.io/en/stable/changelog.html"
Documentation = "https://drf-yasg.readthedocs.io/en/stable/"
Homepage = "https://github.com/axnsan12/drf-yasg"
Issues = "https://github.com/axnsan12/drf-yasg/issues"
Repository = "https://github.com/axnsan12/drf-yasg"

[tool.ruff]
exclude = ["**/migrations/*"]
line-length = 88
lint.select = [
    "ASYNC", # flake8-async
    "C90",   # mccabe
    "C4",    # flake8-comprehensions
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "INT",   # flake8-gettext
    "LOG",   # flake8-logging
    "PLE",   # pylint errors
    "PYI",   # flake8-pyi
    "SLOT",  # flake8-slots
    "T10",   # flake8-debugger
    "TCH",   # flake8-type-checking
    "W",     # pycodestyle warnings
    "YTT",   # flake8-2020
]

lint.isort.known-first-party = [
    "drf_yasg",
    "testproj",
    "articles",
    "people",
    "snippets",
    "todo",
    "users",
    "urlconfs",
]

lint.mccabe.max-complexity = 13
lint.per-file-ignores."src/drf_yasg/inspectors/field.py" = ["E721"]
lint.per-file-ignores."src/drf_yasg/openapi.py" = ["E721"]
lint.per-file-ignores."testproj/testproj/settings/*" = ["F405"]
lint.per-file-ignores."tests/test_schema_generator.py" = ["FA100"]

[tool.ruff.per-file-target-version]
"tests/pep695_with_pep563.py" = "py312"
