[bumpversion]
current_version = 1.19.1

[metadata]
name = drf_yasg2
version = 1.19.1
description = Automated generation of real Swagger/OpenAPI 2.0 schemas from Django Rest Framework code
license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoelLefkowitz/drf-yasg
author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

keywords =
    schema
    swagger
    openapi
    codegen
    documentation
    django
    django-rest-framework

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Environment :: Web Environment
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Topic :: Documentation
    Topic :: Software Development :: Code Generators

[flake8]
ignore = 
	E203
	E230
	E231
	E501
	F405
	W503
	W504
exclude = 
	**/migrations/*

[isort]
line_length = 88
atomic = True
force_to_top = True
skip = .eggs,.tox,docs,env,venv,node_modules
skip_glob = venv/*,**/migrations/*

[mypy]
pretty = True
warn_return_any = True
warn_unused_configs = True
